Fixed sidebar spacing

--- a/blog/client/styles/main.css
+++ b/blog/client/styles/main.css
@@ -49,7 +49,7 @@ body {
   background-color: #403074;
   color: #040110;
   text-align: center;
-  padding: 1em;
+  padding: 2em 1em 1em 1em;
   height: 100%;
   width: 20em;
   float: left;
